phpservermon/psm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: phpservermon
  name: phpservermon
spec:
  replicas: 1
  selector:
    matchLabels:
      service: phpservermon
  template:
    metadata:
      labels:
        phpservermon-tier: "true"
        service: phpservermon
    spec:
      containers:
      - env:
          - name: PSM_BASE_URL
            value: http://phpservermon.lan/
          - name: PSM_DB_HOST
            value: mariadb
          - name: PSM_DB_NAME
            value: phpservermon
          - name: PSM_DB_USER
            value: phpservermon
          - name: PSM_DB_PASS
            value: password
          - name: PSM_DB_PREFIX
            value: psm_
          - name: PHP_TIMEZONE
            value: America/New_York
        image: benoitpodwinski/phpservermon:latest
        imagePullPolicy: Always
        name: phpservermon-app
        ports:
        - containerPort: 80
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        phpservermon-tier: "true"
        service: mariadb
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              value: password
            - name: MYSQL_DATABASE
              value: phpservermon
            - name: MYSQL_USER
              value: phpservermon
            - name: MYSQL_PASSWORD
              value: password
          image: mariadb:10
          imagePullPolicy: Always
          name: mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: phpservermon-db
      restartPolicy: Always
      volumes:
        - name: phpservermon-db
          persistentVolumeClaim:
            claimName: phpservermon-db
