phpservermon/psm-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: phpservermon
  name: phpservermon
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    service: phpservermon
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: mariadb
  name: mariadb
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    service: mariadb
